src/scss/components/hamburger.scss
/* Fades in the dark background */
.darkenbg {
    opacity: 0.7 !important;
    z-index: 5 !important;
}

#darkenbackground {
    position: fixed;
    width: 100%;
    height: 100%;
    background: #000;
    z-index: 0;
    opacity: 0;
    -moz-transition:all 0.4s;
    -webkit-transition:all 0.4s;
    transition: all 0.4s;
}

/* menu toggles */
.menuelement {
    color: #18003C;
}

#menuToggle {
    display: block;
}
  
#menuToggle input {
    display: block;
    width: 33px;
    height: 22px;
    position: absolute;
    top: 5px;
    left: 0;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
    -webkit-touch-callout: none;
}

/* spans represent hamburger button */
#menuToggle span:first-child {
    transform-origin: 0% 0%;
}
  
#menuToggle span:nth-last-child(2) {
    transform-origin: 0% 100%;
}
  
#menuToggle input:checked ~ span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
    background: #18003C;
}
  
#menuToggle input:checked ~ span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
}
  
#menuToggle input:checked ~ span:nth-last-child(2) {
    transform: rotate(-45deg) translate(0, 0px);
}

/* actual menu */
#menu {
    position: fixed;
    width: 100%;
    margin: -60px 0 0 -100%;
    padding: 30px;
    padding-top: 100px;
    right: 0;
    
    background: hsl(0, 0%, 96%);
    list-style-type: none;
    -webkit-font-smoothing: antialiased;
    /* to stop flickering of text in safari */
    
    transform-origin: 0% 0%;
    transform: translate(0, -100%);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li {
    padding: 10px 0;
    font-size: 16pt;
    display: block;
    text-align: right;
    text-transform: uppercase;
}

#menuToggle input:checked ~ ul {
    transform: none;
}
  
@media screen and (max-width: 1087px) {
    #menuToggle {
      display: block;
      position: fixed;
      top: 15px;
      right: 20px;
      height: auto;
      z-index: 1;
      -webkit-user-select: none;
      user-select: none;
    }
      
    #menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-top: 5px;
    position: relative;
    background: hsl(0, 0%, 96%);
    border-radius: 0px;
    z-index: 1;
    
    transform-origin: 4px 0px;
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                opacity 0.55s ease;
    }  
}

